<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

    <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/box_one"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" style="@style/WhiteBox"
            android:layout_marginTop="@dimen/margin_wide" android:layout_marginLeft="@dimen/margin_wide"
            android:layout_marginRight="@dimen/margin_wide"
            android:fontFamily="@font/roboto" android:id="@+id/tv_box_one"/>
    <TextView
            android:text="@string/box_two"
            android:layout_width="130dp"
            android:layout_height="0dp"
            android:id="@+id/tv_box_two"
            app:layout_constraintDimensionRatio="h,1:1" style="@style/WhiteBox" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_box_one"
            app:layout_constraintStart_toStartOf="@+id/tv_box_one"/>
    <TextView
            android:text="@string/box_three"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/tv_box_three" style="@style/WhiteBox"
            app:layout_constraintBottom_toTopOf="@+id/tv_box_four"
            app:layout_constraintTop_toTopOf="@+id/tv_box_two" app:layout_constraintStart_toEndOf="@+id/tv_box_two"
            app:layout_constraintEnd_toEndOf="@+id/tv_box_one"
            android:layout_marginStart="16dp"/>
    <TextView
            android:text="@string/box_four"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/tv_box_four" style="@style/WhiteBox"
            app:layout_constraintTop_toBottomOf="@+id/tv_box_three"
            app:layout_constraintBottom_toTopOf="@+id/tv_box_five"
            app:layout_constraintStart_toStartOf="@+id/tv_box_three"
            app:layout_constraintEnd_toEndOf="@+id/tv_box_three" android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"/>
    <TextView
            android:text="@string/box_five"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/tv_box_five" style="@style/WhiteBox"
            app:layout_constraintBottom_toBottomOf="@+id/tv_box_two"
            app:layout_constraintTop_toBottomOf="@+id/tv_box_four"
            app:layout_constraintStart_toStartOf="@+id/tv_box_four"
            app:layout_constraintEnd_toEndOf="@+id/tv_box_four"/>
    <TextView
            android:text="@string/how_to_play"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_text" app:layout_constraintStart_toStartOf="@+id/tv_box_two"
            android:textSize="24sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/tv_info"/>
    <TextView
            android:text="@string/tap_the_boxes_and_buttons"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/tv_info" app:layout_constraintStart_toEndOf="@+id/tv_text"
            android:layout_marginStart="16dp" app:layout_constraintEnd_toEndOf="@+id/tv_box_five"
            app:layout_constraintTop_toBottomOf="@+id/tv_box_two"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.0"
            android:layout_marginTop="16dp" android:layout_marginBottom="16dp"/>
    <Button
            android:text="@string/red"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_red"
            app:layout_constraintBaseline_toBaselineOf="@+id/btn_yellow" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toStartOf="@+id/btn_yellow"
            android:layout_marginStart="16dp"/>
    <Button
            android:text="@string/yellow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/btn_yellow"
            app:layout_constraintStart_toEndOf="@+id/btn_red"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toStartOf="@+id/btn_green"
            android:layout_marginStart="16dp" android:layout_marginEnd="16dp" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_info" android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.99"/>
    <Button
            android:text="@string/green"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_green"
            app:layout_constraintBaseline_toBaselineOf="@+id/btn_yellow"
            app:layout_constraintStart_toEndOf="@+id/btn_yellow" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>